--- a/es/licencias/redes-sociales.yml
+++ b/es/licencias/redes-sociales.yml
@@ -9,9 +9,10 @@ content:
   more: |
     La fuente puede ser utilizada en formatos comunes como imágenes estáticas y videos, aunque en el caso de los videos algunas fundiciones utilizan una licencia diferente. Si se trata de publicidad o contenido pagado puede ser necesario adquirir otra licencia que mide el número de impresiones.
 
-    Al igual que en otros casos, este uso está a menudo incluido en licencias básicas o paquetes de licencias. Aún así, algunas fundiciones siguen una estrategia diferente, dividiendo la licencia en usos más específicos como redes sociales, logotipo o anuncios digitales.
+text: |
+  Al igual que en otros casos, este uso está a menudo incluido en licencias básicas o paquetes de licencias. Aún así, algunas fundiciones siguen una estrategia diferente, dividiendo la licencia en usos más específicos como redes sociales, logotipo o anuncios digitales.
 
-    El precio se calcula en la mayoría de los casos según el número de personas subscritas o que siguen un perfil en todas sus redes sociales, partiendo de 10.000. El precio medio para una tipografía de texto —en una muestra de 18 fundiciones— es 66€, algo por encima de la media en licencias de escritorio y web.
+  El precio se calcula en la mayoría de los casos según el número de personas subscritas o que siguen un perfil en todas sus redes sociales, partiendo de 10.000. El precio medio para una tipografía de texto —en una muestra de 18 fundiciones— es 66€, algo por encima de la media en licencias de escritorio y web.
 
 chart:
   title: Unidade de medida en licencias de redes sociales
