--- a/en/licenses/web.yml
+++ b/en/licenses/web.yml
@@ -9,9 +9,10 @@ content:
   more: |
     Web use is mainly quantified by the site traffic (pageviews or visitors), 76% of the sample. While desktop licences focus on the individuals who will use the font, web licences concentrate on those who will see, read, or interact with the font on websites.
 
-    Over half of the sample (54%) uses pageviews per month as the measuring unit for web licences. While the number of domains is commonly combined with web traffic, there are a few cases (4) where this is the only metric. Many foundries that track employees, users, or workstations sell web licences as part of a package that includes various uses, providing this metric as a universal reference.
+text: |
+  Over half of the sample (54%) uses pageviews per month as the measuring unit for web licences. While the number of domains is commonly combined with web traffic, there are a few cases (4) where this is the only metric. Many foundries that track employees, users, or workstations sell web licences as part of a package that includes various uses, providing this metric as a universal reference.
 
-    The average price for a text font for the web is similar to desktop, with a wider range peaking at 233€. We find a few temporary licences for web use, but they are still rare in the sample. Five foundries charge an annual fee, and two offer multiple timeframes.
+  The average price for a text font for the web is similar to desktop, with a wider range peaking at 233€. We find a few temporary licences for web use, but they are still rare in the sample. Five foundries charge an annual fee, and two offer multiple timeframes.
 
 chart:
   title: Popular measuring units in web licences
