--- a/es/licencias/publicidad-digital.yml
+++ b/es/licencias/publicidad-digital.yml
@@ -9,7 +9,8 @@ content:
   more: |
     La mayoría de métricas en licencias para uso online (web, publicidad digital, redes sociales) miden la audiencia, usando términos diferentes en cada caso. La unidad de medida predominante en anuncios digitales es el número de impresiones, que pueden contabilizarse por mes o con la suma total sin plazo temporal.
 
-    Esta el la muestra más pequeña de nuestra base de datos (11). Excluyendo las dos fundiciones que cobran una tarifa anual, el coste medio para una tipografía de texto es 65€, similar a redes sociales. Hay un caso excepcional que cobra más de 2.000€ por publicidad digital y redes sociales, aunque en este caso el uso es ilimitado para una única marca.
+text: |
+  Esta el la muestra más pequeña de nuestra base de datos (11). Excluyendo las dos fundiciones que cobran una tarifa anual, el coste medio para una tipografía de texto es 65€, similar a redes sociales. Hay un caso excepcional que cobra más de 2.000€ por publicidad digital y redes sociales, aunque en este caso el uso es ilimitado para una única marca.
 
 chart:
   title: Unidades de medida en licencias de publicidad digital
