--- a/en/licenses/epub.yml
+++ b/en/licenses/epub.yml
@@ -16,6 +16,13 @@ chart:
   title: Popular measuring units in ePub licences
   key: ePub
 
+chart_tiers:
+  title: Most popular Number of use cases tiers
+  description: |
+    - Y axis: The most popular tiers by number of use cases allowed.
+    - X row: The number of foundries offering this tier.
+  key: epub-tiers
+
 pricing:
   title: Pricing in ePub licences
   key: ePub-pricing
