--- a/en/licenses/server.yml
+++ b/en/licenses/server.yml
@@ -16,6 +16,13 @@ chart:
   title: Popular measuring units in server licences
   key: server
 
+chart_tiers:
+  title: Most popular number of servers tiers by foundry
+  description: |
+    - Y axis: The most popular tiers by number of servers allowed.
+    - X row: The number of foundries offering this tier.
+  key: server-tiers
+
 pricing:
   title: Pricing in server licences
   key: server-pricing
