--- a/es/licencias/escritorio.yml
+++ b/es/licencias/escritorio.yml
@@ -16,6 +16,13 @@ chart:
   title: Unidades de medida en licencias de escritorio
   key: desktop
 
+chart_tiers:
+  title: Most popular number of users tiers by foundry
+  description: |
+    - Y axis: The most popular tiers by number of users.
+    - X row: The number of foundries offering this tier.
+  key: desktop-tiers
+
 pricing:
   title: Precios en licencias de escritorio
   key: desktop-pricing
