--- a/es/licencias/web.yml
+++ b/es/licencias/web.yml
@@ -18,6 +18,13 @@ chart:
   title: Unidades de medida en licencias web
   key: web
 
+chart_tiers:
+  title: Most popular number of followers tiers by foundry
+  description: |
+    - Y axis: The most popular tiers by number of followers.
+    - X row: The number of foundries offering this tier.
+  key: social-media-tiers
+
 pricing:
   title: Precios en licencias web
   key: web-pricing
