axustes novas graficas

--- a/en/licenses/app.yml
+++ b/en/licenses/app.yml
@@ -21,11 +21,21 @@ chart:
   key: app
 
 chart_tiers:
-  title: Most popular Number of apps tiers
-  key: app-tiers
-  description: |
-    - Y axis: The most popular tiers by number of apps allowed.
-    - X row: The number of foundries offering this tier.
+  - title: Most popular tiers for Number of Apps
+    key: app-tiers-usecase
+    units: [app, apps]
+    description: |
+      The number on the right indicates the amount of foundries that offer that particular tier. We only show the 10 most popular tiers in the sample.
+  - title: Most popular tiers for Number of Monthly users
+    key: app-tiers-monthlyusers
+    units: [user, users]
+    description: |
+      The number on the right indicates the amount of foundries that offer that particular tier. We only show the 10 most popular tiers in the sample.
+  - title: Most popular tiers for Number of Downloads
+    key: app-tiers-downloads
+    units: [download, downloads]
+    description: |
+      The number on the right indicates the amount of foundries that offer that particular tier. We only show the 10 most popular tiers in the sample.
 
 pricing:
   title: Pricing in app licences
