--- a/en/licenses/web.yml
+++ b/en/licenses/web.yml
@@ -19,11 +19,16 @@ chart:
   key: web
 
 chart_tiers:
-  title: Most popular Unique Web Visitors tiers
-  key: web-tiers
-  description: |
-    - Y axis: The most popular tiers by number of Unique Web Visitors (UWV).
-    - X row: The number of foundries offering this tier.
+  - title: Most popular tiers for Number of unique web visitors
+    key: web-tiers-visitors
+    units: [visitor, visitors]
+    description: |
+      The number on the right indicates the amount of foundries that offer that particular tier. We only show the 10 most popular tiers in the sample.
+  - title: Most popular tiers for Number of pageviews
+    key: web-tiers-pageviews
+    units: [page view, page views]
+    description: |
+      The number on the right indicates the amount of foundries that offer that particular tier. We only show the 10 most popular tiers in the sample.
 
 pricing:
   title: Pricing in web licences
