--- a/en/licenses/social-media.yml
+++ b/en/licenses/social-media.yml
@@ -19,11 +19,11 @@ chart:
   key: social-media
 
 chart_tiers:
-  title: Most popular number of followers tiers by foundry
-  description: |
-    - Y axis: The most popular tiers by number of followers.
-    - X row: The number of foundries offering this tier.
-  key: social-media-tiers
+  - title: Most popular tiers for Number of followers
+    key: social-media-tiers
+    units: [follower, followers]
+    description: |
+      The number on the right indicates the amount of foundries that offer that particular tier. We only show the 10 most popular tiers in the sample.
 
 pricing:
   title: Pricing in social media licences
