--- a/en/demographics.yml
+++ b/en/demographics.yml
@@ -18,8 +18,8 @@ chart:
 language_chart:
   title: Foundries by language
   legend:
-    english_only: Font license is only in English
-    non_english_only: Font license in different languages
+    english_only: Font licensing info only in English
+    non_english_only: Font licensing info in different languages
   groups:
     english: Based on English-speaking countries
     non_english: Based on other countries
