--- a/es/demografia.yml
+++ b/es/demografia.yml
@@ -17,12 +17,12 @@ chart:
     men: Sin mujeres en puestos de liderazgo
 
 language_chart:
-  title: Fundiciones según idioma
+  title: Fundiciones por idioma
   legend:
     english_only: Licencias solo en inglés
     non_english_only: Licencias en diferentes idiomas
   groups:
-    english: Con sede en un país de habla inglesa
+    english: Con sede en país de habla inglesa
     non_english: Con sede en otro país
 
 resources:
