--- a/en/licenses/desktop.yml
+++ b/en/licenses/desktop.yml
@@ -17,21 +17,21 @@ chart:
   key: desktop
 
 chart_tiers:
-  - title: Most popular tiers for Number of Users
+  - title: Popular tiers for Number of Users
     key: desktop-tiers-users
     units: [user, users]
     description: |
-      The number on the right indicates the amount of foundries that offer that particular tier. We only show the 10 most popular tiers in the sample.
-  - title: Most popular tiers for Number of Workstations
+      On the right, the number of foundries that offer that particular tier. We show the 10 most popular font usage limits in our sample. 16 foundries include a licence for an unlimited number of users.
+  - title: Popular tiers for Number of Workstations
     key: desktop-tiers-workstations
     units: [workstation, workstations]
     description: |
-      The number on the right indicates the amount of foundries that offer that particular tier. We only show the 10 most popular tiers in the sample.
+      Our sample includes 7 foundries that offer a licence for an unlimited number of workstations.
   - title: Most popular tiers for Number of Employees
     key: desktop-tiers-employees
     units: [employee, employees]
     description: |
-      The number on the right indicates the amount of foundries that offer that particular tier. We only show the 10 most popular tiers in the sample.
+      8 foundries in our sample include a licence for an unlimited number of employees. The maximum font usage limit for this metric reaches 400K in one foundry.
 
 pricing:
   title: Pricing in desktop licences
