--- a/en/licenses/desktop.yml
+++ b/en/licenses/desktop.yml
@@ -21,17 +21,17 @@ chart_tiers:
     key: desktop-tiers-users
     units: [user, users]
     description: |
-      On the right, the number of foundries that offer that particular tier. We show the 10 most popular font usage limits in our sample. 16 foundries include a licence for an unlimited number of users.
+      On the right, the number of foundries that offer that particular tier. We show the 10 most popular font usage limits in our sample. 
   - title: Popular tiers for Number of Workstations
     key: desktop-tiers-workstations
     units: [workstation, workstations]
     description: |
-      Our sample includes 7 foundries that offer a licence for an unlimited number of workstations.
+      Our sample includes 7 foundries that offer a licence for an unlimited number of workstations. Counting all the different measuring units in the sample, 31 foundries sell an unlimited option. 
   - title: Most popular tiers for Number of Employees
     key: desktop-tiers-employees
     units: [employee, employees]
     description: |
-      8 foundries in our sample include a licence for an unlimited number of employees. The maximum font usage limit for this metric reaches 400K in one foundry.
+      The maximum font usage limit for this metric reaches 400K employees in one foundry.
 
 pricing:
   title: Pricing in desktop licences
