--- a/en/licenses/web.yml
+++ b/en/licenses/web.yml
@@ -19,16 +19,16 @@ chart:
   key: web
 
 chart_tiers:
-  - title: Most popular tiers for Number of unique web visitors
+  - title: Popular tiers for Number of Web Visitors
     key: web-tiers-visitors
     units: [visitor, visitors]
     description: |
-      The number on the right indicates the amount of foundries that offer that particular tier. We only show the 10 most popular tiers in the sample.
-  - title: Most popular tiers for Number of pageviews
+      The number on the right indicates the amount of foundries that offer that particular tier. We show the 10 most popular tiers in the sample.
+  - title: Popular tiers for Number of Pageviews
     key: web-tiers-pageviews
     units: [page view, page views]
     description: |
-      The number on the right indicates the amount of foundries that offer that particular tier. We only show the 10 most popular tiers in the sample.
+      39 type foundries, considering all the different measuring units in our sample, provide an unlimited option among their tiers.
 
 pricing:
   title: Pricing in web licences
