--- a/en/licenses/app.yml
+++ b/en/licenses/app.yml
@@ -26,12 +26,12 @@ chart_tiers:
     units: [app, apps]
     description: |
       The number on the right indicates the amount of foundries that offer that particular tier. We show the 10 most popular tiers in the sample.
-  - title: Most popular tiers for Number of Monthly Users
+  - title: Popular tiers for Number of Monthly Users
     key: app-tiers-monthlyusers
     units: [user, users]
     description: |
       Three type foundries include an option for an unlimited number of monthly users. Counting all the different metrics for app use, a total of 27 offer an unlimited option.
-  - title: Most popular tiers for Number of Downloads
+  - title: Popular tiers for Number of Downloads
     key: app-tiers-downloads
     units: [download, downloads]
     description: |
