--- a/en/licenses/server.yml
+++ b/en/licenses/server.yml
@@ -17,11 +17,11 @@ chart:
   key: server
 
 chart_tiers:
-  - title: Most popular tiers for Number of servers
+  - title: Popular tiers for Number of servers
     key: server-tiers
     units: [server, servers]
     description: |
-      The number on the right indicates the amount of foundries that offer that particular tier. We only show the 10 most popular tiers in the sample.
+      The number on the right indicates the amount of foundries that offer that particular tier. These are the 10 most popular tiers in the sample.
 
 pricing:
   title: Pricing in server licences
